[package]
name = "squareup"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Squareup SDK for Rust"
keywords = ["square", "squareup"]
repository = "https://github.com/kcable194/squareup"
include = [
    "src/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
