[package]
name = "squareup"
description = "Rust SDK for the Square Developer API"
version = "0.0.1"
homepage = "https://github.com/kcable194/squareup"
repository = "https://github.com/kcable194/squareup"
authors = ["Mike Harkins <mharkins@cosm.com>", "Keaton Cable <keaton@mavengvl.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["Square", "Squareup", "API", "Client", "SDK"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
infer = "0.15.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
package_info = "0.1.0"
package_info_derive = "0.1.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
