[package]
name = "squareup"
description = "Rust SDK for the Square Developer API"
version = "2.11.0"
homepage = "https://github.com/kcable194/squareup"
repository = "https://github.com/kcable194/squareup"
authors = ["Mike Harkins <mharkins@cosm.com>", "Keaton Cable <keaton@mavengvl.com>"]
edition = "2021"
license = "MIT"
keywords = ["Square", "Squareup", "API", "Client", "SDK"]
readme = "../README.md"
exclude = ["../examples", "../.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
infer = "0.16.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.6"
package_info = "0.1.0"
package_info_derive = "0.1.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono-tz = { version = "0.9", features = ["filter-by-regex"] }