[package]
name = "squareup"
description = "Rust SDK for the Square Developer API"
version = "2.15.1"
homepage = "https://github.com/kcable194/squareup"
repository = "https://github.com/kcable194/squareup"
authors = [
  "Mike Harkins <mharkins@cosm.com>",
  "Keaton Cable <keaton@mavengvl.com>",
]
edition = "2024"
license = "MIT"
keywords = ["Square", "Squareup", "API", "Client", "SDK"]
readme = "../README.md"
exclude = ["../examples", "../.github"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
infer = "0.19.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
package_info = "0.1.0"
package_info_derive = "0.1.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.20"
chrono-tz = { version = "0.10.4", features = ["filter-by-regex"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]

